k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsawy-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: devopsawy-cert
spec:
  rules:
    - host: www.devopsawy.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service   
                port:
                  number: 80
